<resources>
    <string name="app_name">贵阳数据禁毒</string>
    <string name="h_app_name">海南禁毒</string>
    <string name="copyright_name">技术支持:中国移动通信集团海南有限公司</string>
    <string name="gys">贵阳市</string>
    <string name="back">返回</string>
    <string name="help">帮助</string>
    <string name="shi">是</string>
    <string name="fou">否</string>
    <string name="qd">确定</string>
    <string name="qx">取消</string>
    <string name="shaxin">刷新</string>
    <string name="tishi">提示</string>
    <string name="zcdjtc">再次点击退出</string>
    <string name="wu">无</string>
    <string name="common_today">今天</string>
    <string name="bbyszx">版本已是最新!</string>
    <string name="common_network_unavailable">当前网络不可用，请检查你的网络设置</string>
    <string name="server_err">获取服务器资源失败</string>
    <string name="xz">新增</string>
    <string name="bc">保存</string>
    <string name="shanchu">删除</string>
    <string name="xiugai">修改</string>
    <string name="permission_setting_tip">当前应用缺少必要权限\n请点击\"设置\"-\"权限\"-打开所需权限。\n最后点击两次后退按钮，即可返回。</string>
    <string name="common_setting">设置</string>
    <string name="common_exit">退出</string>
    <string name="pz">拍照</string>
    <string name="xc">相册</string>
    <string name="video">视频</string>
    <string name="sctp">上传图片</string>
    <string name="insertsdcard">对不起，请插入SD卡</string>
    <string name="notSupport">对不起，暂不支持该操作</string>
    <string name="Fail">失败</string>
    <string name="bz">备注</string>
    <string name="xxtxwcscfj">请将信息填写完整，并上传附件!</string>
    <string name="fjsccg">附件上传成功</string>
    <string name="fjscsb">附件上传失败</string>
    <string name="scfjyl">上传附件预览</string>
    <string name="sccg">删除成功!</string>
    <string name="scsb">删除失败!</string>
    <string name="xgcg">修改成功!</string>
    <string name="xgsb">删除成功!</string>
    <string name="nqdytcm">您确定要退出吗&#63;</string>
    <string name="p_name">智慧禁毒管理平台</string>
    <string name="flsm">法律声明</string>
    <string name="yhxy">用户协议</string>
    <string name="cwm">错误码&#58;</string>
    <string name="cwxx">错误信息&#58;</string>
    <string name="rlbdsbts">经系统检测,该对象与被检测吸毒人员相似度较低,不能进行该操作!</string>
    <string name="xzdqft">新增访谈</string>
    <string name="xzdqlj">新增尿检</string>
    <string name="xzdqbg">新增报告</string>
    <string name="wwts">%1$s需要运行在互联网环境,请在其它界面点击退出登录按钮后,关闭VPN客户端后,在登录界面选择互联网环境后登录再操作!</string>
    <string name="nwts">该功能需要运行在政务外网环境,请在其它界面点击退出登录按钮后,打开VPN客户端后,在登录界面选择政务外网环境后登录再操作!</string>
    <string name="hlw">互联网</string>
    <string name="zwww">政务外网</string>
    <string name="common_yesterday">昨天</string>
    <string name="common_date_format_month_day">MM月dd日</string>
    <string name="common_date_format_year_month_day">yyyy年MM月dd日</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="refresh_pull_to_refresh">下拉可以刷新&#8230;</string>
    <string name="refresh_release_to_refresh">松开可以刷新&#8230;</string>
    <string name="refresh_refreshing">正在努力加载中&#8230;</string>
    <string name="ptr_start_pull_label">下拉进行刷新</string>
    <string name="ptr_start_release_label">松开刷新…</string>
    <string name="ptr_start_refreshing_label">加载中…</string>
    <string name="ptr_end_pull_label">上拉显示更多</string>
    <string name="ptr_end_release_label">松开加载</string>
    <string name="ptr_end_refreshing_label">加载中…</string>
    <string name="ptr_end_load_more">加载更多</string>
    <string name="gesture_title">设置手势密码</string>
    <string name="gesture_toggle_on_success">手势密码开启成功</string>
    <string name="gesture_toggle_off_success">手势密码关闭成功</string>
    <string name="gesture_tips_first">请绘制手势密码</string>
    <string name="gesture_tips_second">请再次绘制手势密码</string>
    <string name="gesture_tips_err_rule">请至少连接4个点</string>
    <string name="gesture_tips_err_not_equal">与上一次绘制的密码不一致，请重新绘制</string>
    <string name="gesture_tips_pwd">请绘制解锁密码</string>
    <string name="gesture_tips_pwd_success">手势密码设置成功</string>
    <string name="gesture_tips_pwd_err">密码错误</string>
    <string name="gesture_login_reset">重新开始设置手势密码</string>
    <string name="gesture_login_forget">忘记密码</string>
    <string name="gesture_login_forget_relogin">忘记密码需要重新登录</string>
    <string name="dl">登录</string>
    <string name="qsrmzdqp">请输入您的账户</string>
    <string name="qsrnmm">请输入您的密码</string>
    <string name="dlsb">登录失败,请检查您的账户和密码，稍后再试!</string>
    <string name="wlhj">网络环境&#58;</string>
    <string name="xdry">吸毒人员</string>
    <string name="wdxx">我的消息</string>
    <string name="wdgz">我的工作</string>
    <string name="qdjsfjxss">请点击上方输入框进行搜索!</string>
    <string name="gztx">工作提醒</string>
    <string name="dqft">访谈</string>
    <string name="dqlj">尿检</string>
    <string name="dqbg">报告</string>
    <string name="dqpg">评估</string>
    <string name="dtxxwh">动态信息维护</string>
    <string name="wd">未读&#58;%1$s条</string>
    <string name="wdrw">我的任务</string>
    <string name="zhl">综合类</string>
    <string name="xtyyl">系统应用类</string>
    <string name="ywzsl">业务知识类</string>
    <string name="dajsl">档案建设类</string>
    <string name="sjgzl">实际工作类</string>
    <string name="qtl">其他类</string>
    <string name="qysm">%1$s-%2$s</string>
    <string name="zsh">早上好</string>
    <string name="xwh">下午好</string>
    <string name="wsh">晚上好</string>
    <string name="xmqy">%1$s &#58; %2$s &#40; %3$s &#41;</string>
    <string name="dqgz">定期工作</string>
    <string name="pfrw">派发任务</string>
    <string name="dtgz">动态关注</string>
    <string name="gzyjwc">该项工作已经处理完成!</string>
    <string name="ndqssglqw">您当前所属管理区域为:</string>
    <string name="djckqyryxx">点击查看区域人员信息</string>
    <string name="djjrss">点击进行搜索</string>
    <string name="qsrsfzhhmz">请输入身份证号码或者姓名</string>
    <string name="ss">搜索</string>
    <string name="qsrycxddx">请输入要查询的关键字</string>
    <string name="xm">姓名&#58;%1$s</string>
    <string name="xb">性别&#58;%1$s</string>
    <string name="sfzhm">身份证号&#58;%1$s</string>
    <string name="sfzhmlable">身份证号：%1$s</string>
    <string name="hjssqy">户籍所在地&#58;%1$s</string>
    <string name="yddhm">移动电话&#58;%1$s</string>
    <string name="cccg">关注成功</string>
    <string name="qxsc">取消关注</string>
    <string name="ccsb">操作失败,请稍后再试!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="jbxx">基本信息</string>
    <string name="lxfsjdz">联系方式及地址</string>
    <string name="whjnjgzqk">文化技能及工作情况</string>
    <string name="xdqk">吸毒情况</string>
    <string name="zpxx">网格员、社区民警及照片信息</string>
    <string name="uploadxdryzp">上传吸毒人员照片</string>
    <string name="sfzh">身份证号&#58;</string>
    <string name="xmm">姓名&#58;</string>
    <string name="cym">曾用名&#58;</string>
    <string name="bmch">别名&#47;绰号&#58;</string>
    <string name="xbm">性别&#58;</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="sscq">所属社区&#58;</string>
    <string name="mz">民族&#58;</string>
    <string name="sg">身高&#040;单位&#58;cm&#041;&#58;</string>
    <string name="futz">是否与父母同住&#58;</string>
    <string name="hyzk">婚姻状况&#58;</string>
    <string name="stzk">身体状况&#58;</string>
    <string name="stxxzk">身体详细情况&#58;</string>
    <string name="jtqk">家庭情况&#58;</string>
    <string name="syb">上一步</string>
    <string name="xyb">下一步</string>
    <string name="save">保存</string>
    <string name="hjszd">户籍所在地&#58;</string>
    <string name="hjszdxxdz">户籍所在地详细地址&#58;</string>
    <string name="xjzd">现居住地&#58;</string>
    <string name="xjzdxxdz">现居住地详细地址&#58;</string>
    <string name="yddh">移动电话&#58;</string>
    <string name="gddh">固定电话&#58;</string>
    <string name="qqhm">QQ号码&#58;</string>
    <string name="wxh">微信号&#58;</string>
    <string name="hlwyx">互联网邮箱&#58;</string>
    <string name="zzmm">政治面貌&#58;</string>
    <string name="zzmmxx">政治面貌详细情况&#58;</string>
    <string name="whcd">文化程度&#58;</string>
    <string name="sfcjgzypx">是否参加过职业培训&#58;</string>
    <string name="jyqk">就业情况&#58;</string>
    <string name="srqk">收入情况&#58;</string>
    <string name="ccxdrq">初次吸毒日期&#58;</string>
    <string name="lydipz">滥用毒品种类&#58;</string>
    <string name="wffzqk">违法犯罪情况&#58;</string>
    <string name="wgy">网格员&#58;</string>
    <string name="sqmj">社区民警&#58;</string>
    <string name="qtdpxq">其他毒品详情&#58;</string>
    <string name="qttcjn">其他特长技能&#58;</string>
    <string name="tcjn">特长技能&#58;</string>
    <string name="shbzqk">社会保障情况&#58;</string>
    <string name="grjl">个人简历&#58;</string>
    <string name="tzgg">通知公告</string>
    <string name="fbdw">发布单位&#58;%1$s</string>
    <string name="fbsj">发布时间&#58;%1$s</string>
    <string name="xdryxx">吸毒人员信息</string>
    <string name="xmhxb">%1$s&#47;%2$s</string>
    <string name="jczl">基础资料</string>
    <string name="sjcx">综合查询</string>
    <string name="cjxx">采集信息</string>
    <string name="jzxx">居住信息</string>
    <string name="wslr">文书录入</string>
    <string name="qjcz">请假记录</string>
    <string name="nyxtfdx">您确定要给%1$s发短信吗？</string>
    <string name="myhm">该吸毒人员没有输入手机号码!</string>
    <string name="hqdacg">获取档案数据成功!</string>
    <string name="hqdasb">获取档案数据失败!</string>
    <string name="rybdsfkszx">社区戒毒/社区康复人员是否已报到开始执行?(此功能需要退出VPN客户端后,在互联网环境下使用)</string>
    <string name="xqdwsbs">你好,获取位置失败,若要继续上传报到照片,请点击返回后重新进入!</string>
    <string name="xmwm">姓名</string>
    <string name="xinb">性别</string>
    <string name="csny">出生日期</string>
    <string name="cymbm">曾用名</string>
    <string name="whcdwm">文化程度</string>
    <string name="hjssqywm">户籍所属区域</string>
    <string name="lxfs">联系方式</string>
    <string name="hjxxdz">户籍详细地址</string>
    <string name="xjzdxz">现居住地详址</string>
    <string name="xdryxq">%1$s&#45;基础资料</string>
    <string name="wm">文盲&#47;半文盲</string>
    <string name="xx">小学</string>
    <string name="cz">初中</string>
    <string name="gz">高中&#40;含中专&#44;高职&#41;</string>
    <string name="dxzk">大学专科</string>
    <string name="dxbkjys">大学本科及以上</string>
    <string name="njjl">%1$s&#45;尿检记录</string>
    <string name="xyzssnj">是否需要做实时尿检?</string>
    <string name="njlx">尿检类型&#58;%1$s</string>
    <string name="njjg">尿检结果&#58;%1$s</string>
    <string name="njrq">尿检日期&#58;%1$s</string>
    <string name="jcr">检测人&#58;%1$s</string>
    <string name="njdd">尿检地点&#58;%1$s</string>
    <string name="cjrq">创建日期&#58;%1$s</string>
    <string name="yinx">阴性</string>
    <string name="yanx">阳性</string>
    <string name="dqnj">尿检</string>
    <string name="tjnj">突击尿检</string>
    <string name="njxqbt">%1$s第%2$s次尿检</string>
    <string name="njlxw">尿检类型&#58;</string>
    <string name="njrqw">尿检日期&#58;</string>
    <string name="njcs">尿检次数:</string>
    <string name="sdnj">%1$s的尿检</string>
    <string name="njddw">尿检地点&#58;</string>
    <string name="jcrw">检测人&#58;</string>
    <string name="njjgm">尿检结果&#58;</string>
    <string name="smscfj">扫描上传附件&#58;</string>
    <string name="sm">扫描</string>
    <string name="upload_attachment_err">上传附件失败</string>
    <string name="upload_success">保存成功</string>
    <string name="upload_failed">保存失败</string>
    <string name="common_err_tips">请将信息填写完整，并上传附件！</string>
    <string name="qjxxtxwz">请将信息填写完整！</string>
    <string name="person_exist">该人员信息已存在</string>
    <string name="person_not_exist">可添加该人员</string>
    <string name="ssdr">受送达人</string>
    <string name="sdsj">送达时间</string>
    <string name="sddd">送达地点</string>
    <string name="sdfs">送达方式</string>
    <string name="sdfsjt">其他具体方式</string>
    <string name="sfjs">是否拒收</string>
    <string name="jsyy">拒收原因</string>
    <string name="sfds">是否代收</string>
    <string name="dsr">代收人</string>
    <string name="dsyy">代收原因</string>
    <string name="yssdrgx">与受送达人关系</string>
    <string name="jzr">见证人</string>
    <string name="zzyy">中止原因</string>
    <string name="zzrq">中止日期</string>
    <string name="ssqy">所属区域</string>
    <string name="tyjg">同意机关</string>
    <string name="qzcs">强制措施</string>
    <string name="glqx">隔离期限</string>
    <string name="sxfzms">涉嫌犯罪描述</string>
    <string name="fjsm">附件说明</string>
    <string name="jdjg">决定机关:</string>
</resources>