<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customet="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/qiandw_system_header_include"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13.3dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="13dip">

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ssd_reason_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_enable="false"
                customet:custom_tv="@string/ssdr"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/sd_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customet:custom_enable="false"
                customet:custom_iv="@drawable/time_button"
                customet:custom_show="true"
                customet:custom_tv="@string/sdsj"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ssd_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_tv="@string/sddd"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/sd_type_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customet:custom_enable="false"
                customet:custom_show="true"
                customet:custom_tv="@string/sdfs"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/sd_type_detail_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                customet:custom_tv="@string/sdfsjt"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/js_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customet:custom_enable="false"
                customet:custom_show="true"
                customet:custom_tv="@string/sfjs"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/js_reason_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                customet:custom_tv="@string/jsyy"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ds_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customet:custom_enable="false"
                customet:custom_show="true"
                customet:custom_tv="@string/sfds"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ds_peason_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                customet:custom_tv="@string/dsr"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ds_reason_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                customet:custom_tv="@string/dsyy"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/gx_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                customet:custom_tv="@string/yssdrgx"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/jzr_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_tv="@string/jzr"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:text="@string/smscfj"
                    android:textColor="@color/new_notice_color"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:id="@+id/scan_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/scan_btn"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/scan"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:text="@string/sm"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>
                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/preview_iv"
                android:layout_width="320dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="13.3dip"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/bottom_actions_container"
        layout="@layout/ui_word_bottom_btn"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>