<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customet="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/qiandw_system_header_include"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13.3dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="13dip">

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_tv="@string/xmwm"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/ssqy_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_tv="@string/ssqy"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/zzyy_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_enable="false"
                customet:custom_show="true"
                customet:custom_tv="@string/zzyy"/>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/zzrq_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                customet:custom_enable="false"
                customet:custom_iv="@drawable/time_button"
                customet:custom_show="true"
                customet:custom_tv="@string/zzrq"/>

            <LinearLayout
                android:id="@+id/sxfzContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                    android:id="@+id/jdjg_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    customet:custom_tv="@string/jdjg"/>

                <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                    android:id="@+id/qzcs_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    customet:custom_enable="false"
                    customet:custom_show="true"
                    customet:custom_tv="@string/qzcs"/>

                <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                    android:id="@+id/sxfzms_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    customet:custom_tv="@string/sxfzms"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/zyjdContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                    android:id="@+id/tyjg_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    customet:custom_tv="@string/tyjg"/>

                <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                    android:id="@+id/glqx_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    customet:custom_enable="true"
                    customet:custom_show="false"
                    customet:custom_tv="@string/glqx"/>

            </LinearLayout>

            <cn.com.jinke.wh_drugcontrol.customview.CustomEditText
                android:id="@+id/fjsm_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                customet:custom_tv="@string/fjsm"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13.3dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:text="@string/smscfj"
                    android:textColor="@color/new_notice_color"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:id="@+id/scan_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/scan_btn"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/scan"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:text="@string/sm"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>
                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/preview_iv"
                android:layout_width="320dp"
                android:layout_height="220dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="13.3dip"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/bottom_actions_container"
        layout="@layout/ui_word_bottom_btn"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>